fix :: removed sidebar overflow scroll from m-sidebar

--- a/src/styles/6-modules/_m-sidebar.scss
+++ b/src/styles/6-modules/_m-sidebar.scss
@@ -7,13 +7,13 @@
     padding-left: sz(g);
     width: 100%;
     // border: 1px solid yellow;
-
+    overflow: hidden;
+    
     @include mq(1120px, null, 600px) {
         @include wt(third);
         position: fixed;
         z-index: 100;
         left: 0;
-        overflow: scroll;
     }
 }
 
